fixed end game buttons on mobile

--- a/play/main.css
+++ b/play/main.css
@@ -23,11 +23,10 @@ body {
     height: 100%;
 }
 
-
 @media screen and (max-width: 540px) {
     .info-view {
         left: 0px !important;
-        margin:0px !important;
+        margin: 0px !important;
     }
 }
 
@@ -193,6 +192,7 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     height: 100%;
     position: absolute;
     z-index: 6;
+    overflow-y: auto;
     /* background-image: linear-gradient(to right, #d4fc79, #96e6a1); */
     /* background-image: linear-gradient(to right, #43e97b, #38f9d7); */
     background-image: linear-gradient(to top, #30cfd0 0%, #330867 100%);
@@ -266,6 +266,10 @@ input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
 
 .game-end-buttons {
     display: none;
+}
+
+.game-end-buttons .button {
+    margin-bottom: 15px;
 }
 
 .guess-map {
